--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "eslint": "^7.7.0",
+    "eslint-plugin-react": "^7.20.6",
     "next": "9.5.2",
+    "prettier": "^2.0.5",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   }
