--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
     "prettier": "^2.0.5",
     "react": "16.13.1",
     "react-dom": "16.13.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.6.0",
+    "@types/react": "^16.9.46",
+    "typescript": "^4.0.2"
   }
 }
